--- a/Bootstrap4 21.31.59/conFusion/index.html
+++ b/Bootstrap4 21.31.59/conFusion/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles-old.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -30,9 +30,9 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                  <a id="loginButton">
                         <span class="fa fa-sign-in"></span> Login
-                    </a>
+                  </a>
                 </span>
             </div>
         </div>
@@ -88,14 +88,104 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a href="#reserve_table" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
-                       title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" role="button">
-                        Reserve Table</a>
+                    <a id="reserveButton" class="btn btn-block nav-link btn-warning">
+                        Reserve Table
+                    </a>
                 </div>
             </div>
         </div>
     </header>
 
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <dl class="row">
+                        <dd class="col-3">Number of Guests</dd>
+                        <dd class="col-9">
+                            <form>
+                                <div class="form-group row">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio1" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio2" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio3" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio4" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio5" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                               id="inlineRadio6" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">6</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </dd>
+                        <dd class="col-3">Section</dd>
+                        <dd class="col-9">
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="options" id="option1"> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="options" id="option2"> Smoking
+                                </label>
+                            </div>
+                        </dd>
+                        <dd class="col-3">Date and Time</dd>
+                        <dd class="col-9">
+                            <form>
+                                <div class="form-group row">
+                                    <div class="col-6 col-md-6">
+                                        <input type="text" class="form-control" id="date" name="date"
+                                               placeholder="Date">
+                                    </div>
+                                    <div class="col-6 col-md-6">
+                                        <input type="text" class="form-control" id="time" name="time"
+                                               placeholder="Time">
+                                    </div>
+                                </div>
+                            </form>
+                        </dd>
+                        <dd class="col-12">
+                            <div class="offset-2" id="reserve_table">
+                                <button type="button" class="btn btn-secondary disabled" data-dismiss="modal">
+                                    Cancel
+                                </button>
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </div>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row row-content">
             <div class="col">
@@ -142,7 +232,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -199,80 +291,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-sm-8 offset-2">
-                <div class="card">
-                    <div class="card-header" id="reserve">
-                        <h3 class="text-white">Reserve a Table</h3>
-                    </div>
-                    <div class="card-body">
-                        <dl class="row">
-                            <dd class="col-3">Number of Guests</dd>
-                            <dd class="col-9">
-                                <form>
-                                    <div class="form-group row">
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                   id="inlineRadio1" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">1</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                   id="inlineRadio2" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">2</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                   id="inlineRadio3" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">3</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                   id="inlineRadio4" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">4</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                   id="inlineRadio5" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">5</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                   id="inlineRadio6" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">6</label>
-                                        </div>
-                                    </div>
-                                </form>
-                            </dd>
-                            <dd class="col-3">Date and Time</dd>
-                            <dd class="col-9">
-                                <form>
-                                    <div class="form-group row">
-                                        <div class="col-6 col-md-6">
-                                            <input type="text" class="form-control" id="date" name="date"
-                                                   placeholder="Date">
-                                        </div>
-                                        <div class="col-6 col-md-6">
-                                            <input type="text" class="form-control" id="time" name="time"
-                                                   placeholder="Time">
-                                        </div>
-                                    </div>
-                                </form>
-                            </dd>
-                            <dd class="col-12">
-                                <div class="offset-2" id="reserve_table">
-                                    <button type="submit" class="btn btn-primary">
-                                        Reserve
-                                    </button>
-                                </div>
-                            </dd>
-                        </dl>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 
     <footer class="footer">
@@ -322,10 +340,31 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        })
+        $(document).ready(function (){
+            $('#mycarousel').carousel({ interval: 2000 });
+            $('#carouselButton').click(function (){
+                if ($('#carouselButton').children('span').hasClass('fa-pause')){
+                    $('#mycarousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                } else if ($('#carouselButton').children('span').hasClass('fa-play')){
+                    $('#mycarousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                }
+            });
+        });
+    </script>
+    <script>
+        $(document).ready(function (){
+            $('#loginButton').click(function (){
+                $('#loginModal').modal('toggle');
+            });
+            $('#reserveButton').click(function () {
+                $('#reserveModal').modal('toggle');
+            });
+        });
+
     </script>
 </body>
-
 </html>
